@@ -25,6 +25,7 @@ sub.empty	TXT	sub.empty
 sub		NS	ns.sub
 ns.sub  	A	1.2.3.4
 ns.sub  	AAAA	2002::1.2.3.4
+ns.sub		WKS	1.2.3.4 udp domain
 other.sub	TXT	other.sub
 secure		NS	secure
 secure		DS	1312 50 100 96EEB2FFD9B00CD4694E78278B5EFDAB0A80446567B69F634DA078F0
